# tangara-companion

./: .envrc  .gitignore  COPYING  Cargo.toml  README.md  make-tra  meson.build
.cargo/: cargo.toml  config.toml
crates/tangara-cli/: Cargo.toml
crates/tangara-cli/src/: device.rs  flash.rs  main.rs  util.rs
crates/tangara-cli/src/cmd/: console.rs  flash.rs  mod.rs  update.rs
crates/tangara-cli/src/cmd/console/: terminal.rs
crates/tangara-lib/: Cargo.toml
crates/tangara-lib/src/: device.rs  firmware.rs  flash.rs  lib.rs
crates/tangara-lib/src/device/: connection.rs  info.rs
crates/tangara-lib/src/serial/: connection.rs  protocol.rs
data/: Cargo.toml  build.rs  lib.rs  meson.build  resources.gresource.xml  zone.cooltech.tangara.Companion.desktop  zone.cooltech.tangara.Companion.metainfo.xml
data/gtk/: welcome_page.ui
data/icons/: breeze-status-success.license.txt  computer-fail-symbolic.license.txt  firmware.license.txt  folder-symbolic.license.txt  help-about-symbolic.license.txt  info.license.txt  software-update-available-symbolic.license.txt
data/icons/scalable/actions/: companion-firmware-update-symbolic.license.txt  companion-folder-symbolic.license.txt  companion-lua-console-symbolic.license.txt  companion-overview-symbolic.license.txt  companion-settings-symbolic.license.txt
data/icons/scalable/status/: companion-computer-sadface-symbolic.license.txt
data/style/: console.css
pkg/flatpak/: zone.cooltech.tangara.Companion.yml
pkg/macos/: Info.plist  install-dylibs.rb
pkg/windows/: installer.iss
script/: build-linux-cli  build-linux-flatpak  build-macos  build-windows  bump-version  make-tra  meson-aux-cargo  meson-aux-dist-vendor  meson-aux-gen-metainfo
script/lib/: error.sh  extract-dylibbundler-licenses.rb  functions.sh
src/: device.rs  firmware.rs  flash.rs  main.rs  meson.build  util.rs
src/device/: connection.rs  info.rs
src/settings/: audio.rs  display.rs  input.rs  mod.rs
src/ui/: application.rs  connecting.rs  device_page.rs  label_row.rs  lua.rs  mod.rs  nav.rs  overview.rs  settings.rs  spinner.rs  update.rs  update_page.rs  util.rs  waiting.rs  welcome.rs  welcome_page.rs
src/ui/lua/: entry.rs  highlight.rs
src/ui/widgets/: logo.rs
src/util/: watch1.rs
