[package]
name = "tangaraflash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5", package = "libadwaita", features = ["v1_4", "gtk_v4_10"] }
async-channel = "2.1"
espflash = { version = "2.1", default-features = false }
futures = "0.3.30"
gtk = { version = "0.7", package = "gtk4", features = ["v4_12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3"
thiserror = "1.0"
zip = { version = "0.6" }
