[package]
name = "tangara-companion"
version = "0.2.0"
edition = "2021"

[dependencies]
# GTK stack
adw = { version = "0.6", package = "libadwaita", features = ["v1_4", "gtk_v4_10"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_12"] }
glib = "*"

# general deps
async-channel = "2.1.1"
derive_more = "0.99.17"
espflash = { version = "2.1", default-features = false }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3"
thiserror = "1.0"
tree-sitter = "0.20.10"
tree-sitter-lua = "0.0.19"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[patch.crates-io]
serialport = { git = "https://github.com/haileys/serialport-rs", branch = "tangara-flasher" }
