[package]
name = "tangara-companion"
version = "0.4.1"
edition = "2021"
license = "GPL-3"
authors = ["Hailey Somerville <tangaracompanion@hails.org>"]

[dependencies]
# GTK stack
adw = { workspace = true }
gtk = { workspace = true }
glib = { workspace = true }

# project crates
tangara-companion-resources = { path = "data" }
tangara-lib = { workspace = true }

# workspace deps
async-channel = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serialport = { workspace = true }
thiserror = { workspace = true }

# general deps
env_logger = "0.11"
tree-sitter = "0.20.10"
tree-sitter-lua = "0.0.19"

[workspace]
resolver = "2"
members = [
    ".",
    "crates/tangara-cli",
    "crates/tangara-lib",
    "data",
]

[workspace.dependencies]
# project crates
tangara-lib = { path = "crates/tangara-lib" }

# GTK stack
adw = { version = "0.7", package = "libadwaita", features = ["v1_4", "gtk_v4_6"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
glib = "*"
gio = "*"

# general deps
derive_more = "0.99"
async-channel = "2.1"
futures = "0.3"
log = "0.4"
serialport = "4.3"
thiserror = "1.0"

[patch.crates-io]
serialport = { git = "https://github.com/haileys/serialport-rs", branch = "tangara-flasher" }
