[package]
name = "tangara-cli"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "tangara"
path = "src/main.rs"

[dependencies]
# project crates
tangara-lib = { workspace = true }

# workspace deps
futures = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serialport = { workspace = true }
thiserror = { workspace = true }

# general deps
console = "0.15"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
structopt = "0.3"
tokio = { version = "1.43", features = ["macros", "net"] }
tempfile = "3.16.0"
