[package]
name = "tangara-lib"
version = "0.4.0"
edition = "2021"

[dependencies]
# workspace deps
async-channel = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serialport = { workspace = true }
thiserror = { workspace = true }

# general deps
espflash = { version = "3.3", default-features = false, features = [ "serialport" ] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
crc32fast = "1.4.2"

