[package]
name = "tangara-lib"
version = "0.5.0"
edition = "2021"

[dependencies]
# workspace deps
async-channel = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
mio-serial = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# general deps
crc32fast = "1.4.2"
espflash = { version = "4.1", default-features = false, features = [ "serialport" ] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
